fixed spacing on checklist key

--- a/src/css/seed.less
+++ b/src/css/seed.less
@@ -142,10 +142,6 @@ main.content {
 
     .incomplete {
       margin-right: auto;
-
-      @media @mobile {
-        margin: 0px;
-      }
     }
 
   }
@@ -158,13 +154,13 @@ main.content {
     }
   }
 
-  .checklist-key-mobile {
-    display: none;
+  // .checklist-key-mobile {
+  //   display: none;
 
-    @media @mobile {
-      display: block;
-    }
-  }
+  //   @media @mobile {
+  //     display: block;
+  //   }
+  // }
 
   .plan-filter {
     display: none;
@@ -176,21 +172,20 @@ main.content {
       cursor: pointer;
       border-radius: 5px;
       margin-right: 10px;
+      margin-bottom: 10px;
 
 
     @media @mobile {
       .flex(1 1 50%);
-      padding: 10px 0px;
-      text-align: center;
+      padding: 4px;
+      text-align: left;
+      margin-right: 8px;
+      margin-bottom: 8px;
+      max-width: 137px;
     }
-
-      // @media @mobile {
-      //   .text { display: none }
-      // }
-    }
+  }
 
     &:checked + label {
-      font-weight: bold;
       background-color: @df-light-gray;
       cursor: pointer;
     }
